examples/eks-managed-node-group/ingress/inncrea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inncrea
  namespace: inncrea
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: prod-alpha-07
    alb.ingress.kubernetes.io/success-codes: 200-399
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: '80'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-1-2021-06
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:975049889333:certificate/ada55bff-6b13-4861-9d63-953b46e586d4,arn:aws:acm:us-east-1:975049889333:certificate/bf98004c-85a1-4be2-8f92-d06b1c87c579,arn:aws:acm:us-east-1:975049889333:certificate/c15e0b15-0d24-4989-add1-0e2799e671fe
spec:
  rules:
  - host: inncrea.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: inncreasite
            port:
              number: 80
  - host: www.inncrea.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: inncreasite
            port:
              number: 80
  - host: apiflows.inncrea.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: innchat-studio-backend-svc
            port:
              number: 80
  - host: api.masivo.inncrea.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: innchatmass-api
            port:
              number: 3001
  - host: hub.inncrea.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: inncreahub-api
            port:
              number: 3100
  - host: apipay.inncrea.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: paymenthub-api
            port:
              number: 3200
  - host: apipay.axxialegal.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: paymenthub-api
            port:
              number: 3200
  - host: retention.inncrea.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: retention-engine
            port:
              number: 3400
  - host: chat.inncrea.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: inncrea-chatwoot
            port:
              number: 3000
  - host: inntest.inncrea.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: inntest-chatwoot
            port:
              number: 3000
  - host: router.inncrea.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: innchat-router-api
            port:
              number: 3500
  - host: innchat-core.inncrea.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: innchatai-api
            port:
              number: 3500
