examples/eks-managed-node-group/ingress/inncrea/invoiceninja.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invoiceninja
  namespace: invoiceninja
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: prod-alpha-07
    alb.ingress.kubernetes.io/success-codes: 200-399
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-1-2021-06
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:us-east-1:975049889333:certificate/ada55bff-6b13-4861-9d63-953b46e586d4,arn:aws:acm:us-east-1:975049889333:certificate/bf98004c-85a1-4be2-8f92-d06b1c87c579,arn:aws:acm:us-east-1:975049889333:certificate/c15e0b15-0d24-4989-add1-0e2799e671fe'
spec:
  rules:
  - host: billing.inncrea.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: invoiceninja
            port:
              number: 80
